manifests/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  rules:
    - host: filebrowser.torsteinbo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
